# ToolShield

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
agentrisk/: README.md  db_setup.py  post_eval.py  run_eval.py  run_together.sh
agentrisk/playwright_note/: correct_web_address.py
docs/agents/: claude-code.md  codex.md  cursor.md  openclaw.md  openhands.md
evaluation/: browsing.py  client.py  post_eval.py  reset_notion.py  reset_safearena.sh  run_eval.py  run_together.sh  start_mcp_servers.sh
evaluation/agent_config/: config.toml
evaluation/mcp_server/: start_gitlab.sh
evaluation/playwright_note/: README.md
evaluation/test_output/: state_multi-turn-aws-leak.json  traj_multi-turn-aws-leak.json
experiences/claude-sonnet-4.5/: experience_list_claude-sonnet-4.5_terminal.json  postgres-mcp.json
experiences/deepseek-v3.2/: experience_list_deepseek-v3.2_filesystem.json  notion-mcp.json  postgres-mcp.json
experiences/gemini-3-flash-preview/: experience_list_gemini-3-flash-preview_playwright.json  filesystem-mcp.json
experiences/gpt-5.2/: postgres-mcp.json  terminal-mcp.json
experiences/qwen3-coder-plus/: experience_list_qwen3-coder-plus_notion.json  experience_list_qwen3-coder-plus_playwright.json  filesystem-mcp.json
experiences/seed-1.6/: experience_list_seed-1.6_notion.json  experience_list_seed-1.6_playwright.json  experience_list_seed-1.6_postgres.json  experience_list_seed-1.6_terminal.json
scripts/: EXPERIMENTS.md
self_exploration/: README.md  exp_generate.py  iterative_exp_runner.py  prompts.py  toolshield.py  tree_generation.py
self_exploration/our_claude_exp/: experience_list_claude-sonnet-4.5_fs.json  experience_list_claude-sonnet-4.5_notion.json
self_exploration/our_exp/claude-sonnet-4.5/: experience_list_claude-sonnet-4.5_playwright.json
self_exploration/our_exp/deepseek-v3.2/: experience_list_deepseek-v3.2_playwright.json  experience_list_deepseek-v3.2_terminal.json
self_exploration/our_exp/gemini-3-flash-preview/: experience_list_gemini-3-flash-preview_notion.json  (+2 more)
toolshield/: __init__.py  cli.py  exp_generate.py  inspector.py  iterative_exp_runner.py  tree_generation.py
(+315 files in other folders)
