[tool.poetry]
name = "TheAgentCompany"
version = "1.0.0"
description = "A benchmark for agents that could do professional jobs"
authors = ["The Agent Company"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/TheAgentCompany/TheAgentCompany"
include = ["poetry.lock"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
setuptools = "^78.1.0"
fitz = "^0.0.1.dev2"
tqdm = "^4.66.4"

[tool.poetry.group.evaluation.dependencies]
pyyaml = "*"
openhands-ai = { path = "/mnt/data/OpenHands-multi-turn", develop = true }

[tool.poetry.scripts]
toolshield = "self_exploration.toolshield:main"
